fix issues from testing

--- a/cancel_curtain_open.yaml
+++ b/cancel_curtain_open.yaml
@@ -39,7 +39,7 @@ actions:
             value_template: >
               {% set opening = false %}
               {% for curtain in curtains %}
-                  {% set entity_id = expand(device_entities(my_test_json.curtain)) | selectattr('domain', 'eq', 'cover') | map(attribute='entity_id') | first %}
+                  {% set entity_id = expand(device_entities(curtain)) | selectattr('domain', 'eq', 'cover') | map(attribute='entity_id') | first %}
                   {% if is_state(entity_id, 'opening') %}
                   {% set opening = true %}
                 {% endif %}
