--- a/sync_curtain_open.yaml
+++ b/sync_curtain_open.yaml
@@ -41,14 +41,14 @@ actions:
       - conditions:
           - condition: template
             value_template: >
-              {% set all_opened = true %}
+              {% set ns = namespace(all_opened = true) %}
               {% for curtain in curtains %}
                   {% set entity_id = expand(device_entities(curtain)) | selectattr('domain', 'eq', 'binary_sensor') | map(attribute='entity_id') | first %}
                   {% if is_state(entity_id, 'on') %}
-                  {% set all_opened = false %}
+                  {% set ns.all_opened = false %}
                 {% endif %}
               {% endfor %}
-              {{ all_opened }}
+              {{ ns.all_opened }}
         sequence:
           - service: switch.turn_off
             target:
