adds support for input_boolean helpers as switch

--- a/sync_curtain_with_switch.yaml
+++ b/sync_curtain_with_switch.yaml
@@ -10,14 +10,18 @@ blueprint:
       selector:
         entity:
           filter:
-            domain: switch
+            include:
+              - domain: switch
+              - domain: input_boolean
           multiple: true
     close_switches:
       name: Switches to sync with close curtain
       selector:
         entity:
           filter:
-            domain: switch
+            include:
+              - domain: switch
+              - domain: input_boolean
           multiple: true
     curtains:
       name: Curtains to sync
